--- a/references.bib
+++ b/references.bib
@@ -1,339 +1,107 @@
 % This file was created with JabRef 2.6.
 % Encoding: UTF-8
 
-@book{swebok2004,
-  address = {EUA},
-  author = {{IEEE Computer Society}},
-  editor = {Bourque, Pierre and Dupuis, Robert},
-  publisher = {IEEE Press},
-  title = {Software Engineering Body of Knowledge (SWEBOK)},
-  url = {http://www.swebok.org/},
-  year = {2014}
+@book{aho2003compilers,
+  title={Compilers: principles, techniques and tools (for Anna University), 2/e},
+  author={Aho, Alfred V},
+  year={2003},
+  publisher={Pearson Education India}
 }
 
-@ARTICLE{Eastwood1993,
-  author = {A. Eastwood},
-  title = {Firm fires shots at legacy systems},
-  journal = {Computing Canada},
-  year = {1993},
-  volume = {19},
-  pages = {17},
-  number = {2}
+@inproceedings{rasthofer2014machine,
+  title={A Machine-learning Approach for Classifying and Categorizing Android Sources and Sinks.},
+  author={Rasthofer, Siegfried and Arzt, Steven and Bodden, Eric},
+  booktitle={Network and Distributed System Security Symposium NDSS},
+  year={2014}
 }
 
-@ARTICLE{Erlikh2000,
-  author = {Len Erlikh},
-  title = {Leveraging Legacy System Dollars for E-Business},
-  journal = {IT Professional},
-  year = {2000},
-  volume = {2},
-  pages = {17--23},
-  number = {3},
-  address = {Piscataway, NJ, USA},
-  doi = {http://dx.doi.org/10.1109/6294.846201},
-  issn = {1520-9202},
-  owner = {ycc},
-  publisher = {IEEE Educational Activities Department},
-  timestamp = {2008.01.14}
+@misc{androidcoderef,
+  title={AOSP Java Code Style for Contributors},
+  URL = {https://source.android.com/setup/contribute/code-style},
+  note = {Accessed: 12-10-2018},
+  year={2018}
 }
 
-@INPROCEEDINGS{Bennett2000,
-  author = {Keith H. Bennett and V\'{a}clav T. Rajlich},
-  title = {Software maintenance and evolution: a roadmap},
-  booktitle = {Proceedings of the Conference on The Future of Software Engineering
-    (ICSE'00)},
-  year = {2000},
-  pages = {73--87},
-  address = {New York, NY, USA},
-  month = {May},
-  publisher = {ACM Press},
-  doi = {http://doi.acm.org/10.1145/336512.336534},
-  isbn = {1-58113-253-0},
-  location = {Limerick, Ireland},
-  owner = {yguarata},
-  timestamp = {2007.09.17}
+@book{mccabe2003network,
+  Author = {James D. McCabe},
+  Title = {Network Analysis, Architecture and Design, Second Edition (The Morgan Kaufmann Series in Networking)},
+  Publisher = {Morgan Kaufmann},
+  Year = {2003},
+  ISBN = {1558608877},
+  URL = {https://www.amazon.com/Network-Analysis-Architecture-Kaufmann-Networking/dp/1558608877?SubscriptionId=AKIAIOBINVZYXZQZ2U3A&tag=chimbori05-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1558608877}
 }
 
-@INPROCEEDINGS{Bertram2010,
-  author = {Dane Bertram and Amy Voida and Saul Greenberg and Robert Walker},
-  title = {Communication, collaboration, and bugs: the social nature of issue
-	tracking in small, collocated teams},
-  booktitle = {Proceedings of the 2010 ACM Conference on Computer Supported Cooperative
-	Work (CSCW'2010)},
-  year = {2010},
-  pages = {291--300},
-  publisher = {ACM},
-  cite = {1},
-  organizationinstitutioncompany = {University of Calgary, Calgary, AB, Canada},
-  owner = {yguarata},
-  problemaddressed = {change request process understanding},
-  studytype = {exploratory study},
-  timestamp = {2013.03.18}
+@article{viet2010specifying,
+  title={Specifying and enforcing a fine-grained information flow policy: Model and experiments},
+  author={Viet Triem Tong, Val{\'e}rie and Clark, Andrew J and M{\'e}, Ludovic},
+  journal={Journal of Wireless Mobile Networks, Ubiquitous Computing, and Dependable Applications},
+  volume={1},
+  number={1},
+  pages={56--71},
+  year={2010}
 }
 
-@Article{CavalcantiSQJ2011,
-  Title                    = {The bug report duplication problem: an exploratory study},
-  Author                   = {Yguarat{\~a} Cerqueira Cavalcanti and Paulo Anselmo da Mota Silveira Neto and Daniel Lucrédio and Tassio Vale and Eduardo Santana de Almeida and Silvio Romero de Lemos Meira},
-  Journal                  = {Software Quality Journal},
-  Year                     = {2013},
-  Note                     = {Online first on 2011},
-  Pages                    = {36--66},
-  Volume                   = {21},
-
-  __markedentry            = {[yguarata:6]},
-  Abstract                 = {Duplicate bug report entries in bug trackers have a negative impact on software maintenance and evolution. This is due, among other factors, to the increased time spent on report analysis and validation, which in some cases takes over 20 min. Therefore, a considerable amount of time is lost in duplicate bug report analysis. In order to understand the possible factors that cause bug report duplication and its impact on software development, this paper presents an exploratory study in which bug tracking data from private and open source projects were analyzed. The results show, for example, that all projects we investigated had duplicate bug reports and a considerable amount of time was wasted by this duplication. Furthermore, features such as project lifetime, staff size, and the number of bug reports do not seem to be significant factors for duplication, while others, such as the submitters’ profile and the number of submitters, do seem to influence the bug report duplication.},
-  Issue                    = {1},
-  Keyword                  = {Computer Science},
-  Owner                    = {yguarata},
-  Publisher                = {Springer Netherlands},
-  Timestamp                = {2014.02.06}
+@inproceedings{fernandes2016flowfence,
+  title={FlowFence: Practical Data Protection for Emerging IoT Application Frameworks.},
+  author={Fernandes, Earlence and Paupore, Justin and Rahmati, Amir and Simionato, Daniel and Conti, Mauro and Prakash, Atul},
+  booktitle={USENIX Security Symposium},
+  pages={531--548},
+  year={2016}
 }
 
-@misc{Bugzilla,
-  author = {Bugzilla},
-  note = {URL: https://www.bugzilla.org},
-  year = {2013},
+@inproceedings{sun2017data,
+  title={Data-Oriented Instrumentation against Information Leakages of Android Applications},
+  author={Sun, Cong and Feng, Pengbin and Li, Teng and Ma, Jianfeng},
+  booktitle={2017 IEEE 41st Annual Computer Software and Applications Conference (COMPSAC)},
+  pages={485--490},
+  year={2017},
+  organization={IEEE}
 }
 
-@misc{Mantis,
-  author = {{Mantis Bug Tracker}},
-  note = {URL: https://www.mantisbt.org},
-  year = {2013},
+@inproceedings{myers1999jflow,
+  title={JFlow: Practical mostly-static information flow control},
+  author={Myers, Andrew C},
+  booktitle={Proceedings of the 26th ACM SIGPLAN-SIGACT symposium on Principles of programming languages},
+  pages={228--241},
+  year={1999},
+  organization={ACM}
 }
 
-@misc{Trac,
-  author = {{The Trac Project}},
-  note = {URL: https://trac.edgewall.org},
-  year = {2013},
+@inproceedings{vallee2000optimizing,
+  title={Optimizing Java bytecode using the Soot framework: Is it feasible?},
+  author={Vall{\'e}e-Rai, Raja and Gagnon, Etienne and Hendren, Laurie and Lam, Patrick and Pominville, Patrice and Sundaresan, Vijay},
+  booktitle={International conference on compiler construction},
+  pages={18--34},
+  year={2000},
+  organization={Springer}
 }
 
-@INPROCEEDINGS{Aljarah2011,
-  author = {Aljarah, I. and Banitaan, S. and Abufardeh, S. and Jin, W. and Salem,
-	S.},
-  title = {Selecting discriminating terms for bug assignment: a formal analysis},
-  booktitle = {Proceedings of the 7th International Conference on Predictive Models
-	in Software Engineering},
-  year = {2011},
-  pages = {12},
-  organization = {ACM},
-  abstract = {Background. The bug assignment problem is the problem of triaging
-	new bug reports to the most qualified developer. The qualified developer
-	is the one who has enough knowledge in a specific area that is relevant
-	to the reported bug. In recent years, bug triaging has received a
-	considerable amount of attention from researchers. In previous work,
-	bugs were represented as vectors of terms extracted from the bug
-	reports' description. Once the bugs are represented as vectors in
-	the terms space, traditional machine learning techniques are employed
-	for the bug assignment. Most of the previous algorithms are marred
-	by low accuracy values. Aims. This paper formulates the bug assignment
-	problem as a classification task, and then examines the impact of
-	several term selection approaches on the classification effectiveness.
-	Method. Three variants selection methods that are based on the Log
-	Odds Ratio (LOR) score are compared against methods that are based
-	on the Information Gain (IG) score and Latent Semantic Analysis (LSA).
-	The main difference in the methods that are based on the LOR score
-	is in the process of selecting the terms. Results. Term selection
-	techniques that are based on the Log Odds Ratio achieved up to 30%
-	improvement in the precision and up to 5% higher in recall compared
-	to other term selection methods such as Latent Semantic Analysis
-	and Information Gain. Conclusions. Experimental results showed that
-	the effectiveness of bug assignment methods is directly affected
-	by the selected terms that are used in the classification methods.},
-  problemaddressed = {change request assignment},
-  studytype = {validation research}
+@article{li2017static,
+  title={Static analysis of android apps: A systematic literature review},
+  author={Li, Li and Bissyand{\'e}, Tegawend{\'e} F and Papadakis, Mike and Rasthofer, Siegfried and Bartel, Alexandre and Octeau, Damien and Klein, Jacques and Traon, Le},
+  journal={Information and Software Technology},
+  volume={88},
+  pages={67--95},
+  year={2017},
+  publisher={Elsevier}
 }
 
-@INPROCEEDINGS{Hosseini2012,
-  author = {Hadi Hosseini and Raymond Nguyen and Michael W. Godfrey},
-  title = {A Market-Based Bug Allocation Mechanism Using Predictive Bug Lifetimes},
-  booktitle = {Proceedings of the 16th European Conference on Software Maintenance
-	and Reengineering (CSMR'2012)},
-  year = {2012},
-  pages = {149-158},
-  abstract = {Bug assignment in large software projects is typically a time-consuming
-	and tedious task, effective assignment requires that bug triagers
-	hold significant contextual information about both the reported bugs
-	and the pool of available developers. In this paper, we propose an
-	auction-based multiagent mechanism for assigning bugs to developers
-	that is intended to minimize backlogs and overall bug lifetime. In
-	this approach, developers and triagers are both modeled as intelligent
-	software agents working on behalf of individuals in a multiagent
-	environment. Upon receiving a bug report, triager agents auction
-	off the bug and collect the requests. Developer agents compute their
-	bids as a function of the developer's profile, preferences, current
-	schedule of assigned bugs, and estimated time-to-fix of the bug.
-	This value is then sent to the triager agent for the final decision.
-	We use the Eclipse and Firefox bug repositories to validate our approach,
-	our studies suggest that the proposed auction-based multiagent mechanism
-	can improve the bug assignment process compared to currently practised
-	methods. In particular, we found a 16% improvement in the number
-	of fixed bugs compared to the historic data, based on a sample size
-	of 213,000 bug reports over a period of 6 years.},
-  bibsource = {DBLP, http://dblp.uni-trier.de},
-  ee = {http://doi.ieeecomputersociety.org/10.1109/CSMR.2012.25},
-  problemaddressed = {change request assignment},
-  studytype = {validation research}
+@inproceedings{gordon2015information,
+  title={Information Flow Analysis of Android Applications in DroidSafe.},
+  author={Gordon, Michael I and Kim, Deokhwan and Perkins, Jeff H and Gilham, Limei and Nguyen, Nguyen and Rinard, Martin C},
+  booktitle={NDSS},
+  volume={15},
+  pages={110},
+  year={2015}
 }
 
-@ARTICLE{Kagdi2012,
-  author = {Kagdi, Huzefa and Gethers, Malcom and Poshyvanyk, Denys and Hammad,
-	Maen},
-  title = {Assigning change requests to software developers},
-  journal = {Journal of Software: Evolution and Process},
-  year = {2012},
-  volume = {24},
-  pages = {3--33},
-  number = {1},
-  abstract = {The paper presents an approach to recommend a ranked list of expert
-	developers to assist in the implementation of software change requests
-	(e.g., bug reports and feature requests). An Information Retrieval
-	(IR)-based concept location technique is first used to locate source
-	code entities, e.g., files and classes, relevant to a given textual
-	description of a change request. The previous commits from version
-	control repositories of these entities are then mined for expert
-	developers. The role of the IR method in selectively reducing the
-	mining space is different from previous approaches that textually
-	index past change requests and/or commits. The approach is evaluated
-	on change requests from three open-source systems: ArgoUML, Eclipse,
-	and KOffice, across a range of accuracy criteria. The results show
-	that the overall accuracies of the correctly recommended developers
-	are between 47 and 96% for bug reports, and between 43 and 60% for
-	feature requests. Moreover, comparison results with two other recommendation
-	alternatives show that the presented approach outperforms them with
-	a substantial margin. Project leads or developers can use this approach
-	in maintenance tasks immediately after the receipt of a change request
-	in a free-form text. Copyright © 2011 John Wiley & Sons, Ltd.},
-  doi = {10.1002/smr.530},
-  issn = {2047-7481},
-  keywords = {concept and feature location, information retrieval, developer recommendation,
-	software evolution and maintenance, mining software repositories},
-  problemaddressed = {change request assignment},
-  publisher = {John Wiley \& Sons, Ltd},
-  source = {Google Scholar},
-  studytype = {validation research},
-  url = {http://dx.doi.org/10.1002/smr.530}
+@article{sasaki2007truth,
+  title={The truth of the F-measure},
+  author={Sasaki, Yutaka and others},
+  journal={Teach Tutor mater},
+  volume={1},
+  number={5},
+  pages={1--5},
+  year={2007}
 }
 
-@INPROCEEDINGS{Lucca2002,
-  author = {Giuseppe A. Di Lucca and Massimiliano Di Penta and Sara Gradara},
-  title = {An Approach to Classify Software Maintenance Requests},
-  booktitle = {Proceedings of the 18th IEEE International Conference on Software
-	Maintenance (ICSM'02)},
-  year = {2002},
-  pages = {93--},
-  organization = {University of Sannio, Italy},
-  publisher = {IEEE Computer Society},
-  cite = {44},
-  isbn = {0-7695-1819-2},
-  organizationinstitutioncompany = {University of Naples ”Federico II”,},
-  problemaddressed = {change request assignment},
-  studytype = {solution proposal},
-  url = {http://portal.acm.org/citation.cfm?id=876882.879773}
-}
-
-@InProceedings{Anvik2006,
-  Title                    = {Automating bug report assignment},
-  Author                   = {John Anvik},
-  Booktitle                = {Proceedings of the 28th international conference on Software engineering (ICSE'06)},
-  Year                     = {2006},
-  Pages                    = {937--940},
-
-  __markedentry            = {[yguarata:6]},
-  Cite                     = {20},
-  Organizationinstitutioncompany = {Department of Computer Science, University of British Columbia},
-  Owner                    = {yguarata},
-  Problemaddressed         = {change request assignment},
-  Studytype                = {validation research},
-  Timestamp                = {2014.02.06}
-}
-
-@INPROCEEDINGS{Jeong2009,
-  author = {Gaeul Jeong and Sunghun Kim and Thomas Zimmermann},
-  title = {Improving bug triage with bug tossing graphs},
-  booktitle = {Proceedings of the 7th joint meeting of the European software engineering
-	conference and the ACM SIGSOFT symposium on The foundations of software
-	engineering (ESEC/FSE'2009)},
-  year = {2009},
-  pages = {111--120},
-  cite = {43},
-  organizationinstitutioncompany = {Seoul National University, Seoul, South Korea},
-  problemaddressed = {change request assignment},
-  studytype = {validation research}
-}
-
-@Book{Brooks1995,
-  Title                    = {The Mythical Man-Month: Essays on Software Engineering},
-  Author                   = {Frederick P. Brooks},
-  Publisher                = {Addison-Wesley},
-  Year                     = {1995},
-
-  __markedentry            = {[yguarata:6]},
-  Owner                    = {yguarata},
-  Timestamp                = {2014.02.06}
-}
-
-@Book{Hesse-Biber2010,
-  author = 	 {Sharlene Nagy Hesse-Biber},
-  title = 	 {Mixed Methods Research - Mixing Theory and Practice},
-  publisher = 	 {The Guilford Press},
-  year = 	 {2010},
-  isbn = {9781606232590}
-}
-
-@INPROCEEDINGS{Rahman2009,
-  author = {Md. Mainur Rahman and Gunther Ruhe and Thomas Zimmermann},
-  title = {Optimized assignment of developers for fixing bugs an initial evaluation
-	for eclipse projects},
-  booktitle = {Proceedings of the 2009 3rd International Symposium on Empirical
-	Software Engineering and Measurement (ESEM'2009)},
-  year = {2009},
-  pages = {439--442},
-  cite = {6},
-  organizationinstitutioncompany = {Department of Computer Science University of Calgary Calgary, Canada},
-  problemaddressed = {change request assignment},
-  studytype = {validation research}
-}
-
-@InProceedings{CavalcantiEASE2013,
-  Title                    = {{Towards Understanding Software Change Request Assignment: A survey with practitioners}},
-  Author                   = {Yguaratã Cerqueira Cavalcanti and Paulo Anselmo Da Mota Silveira Neto and Ivan Do Carmo Machado and Eduardo Santana de Almeida and Silvio Romero de Lemos Meira},
-  Booktitle                = {{Proceedings of the 17th International Conference on Evaluation and Assessment in Software Engineering (EASE'2013)}},
-  Year                     = {2013},
-  Month                    = {April},
-  Pages                    = {195--206},
-
-  __markedentry            = {[yguarata:6]},
-  Doi                      = {10.1145/2460999.2461028},
-  ISBN                     = {978-1-4503-1848-8},
-  Owner                    = {yguarata},
-  Timestamp                = {2014.02.06}
-}
-
-@Article{CavalcantiJSEP2013,
-  Title                    = {{Challenges and Opportunities for Software Change Request Repositories: a systematic mapping study}},
-  Author                   = {Yguaratã Cerqueira Cavalcanti and Paulo Anselmo da Mota Silveira Neto and Ivan do Carmo Machado and Tassio Ferreira Vale and Eduardo Santana de Almeida and Silvio Romero de Lemos Meira},
-  Journal                  = {Journal of Software: Evolution and Process},
-  Year                     = {2013},
-  Note                     = {Online first},
-
-  __markedentry            = {[yguarata:6]},
-  Doi                      = {10.1002/smr.1639},
-  Owner                    = {yguarata},
-  Timestamp                = {2014.02.06}
-}
-
-@Article{Lehman1980,
-  Title                    = {Programs, life cycles, and laws of software evolution},
-  Author                   = {M.M. Lehman},
-  Journal                  = {Proceedings of the IEEE},
-  Year                     = {1980},
-
-  Month                    = {sept.},
-  Number                   = {9},
-  Pages                    = { 1060 - 1076},
-  Volume                   = {68},
-
-  __markedentry            = {[yguarata:6]},
-  Owner                    = {yguarata},
-  Timestamp                = {2014.02.06}
-}
