--- a/risethesis.tex
+++ b/risethesis.tex
@@ -69,7 +69,7 @@
 %%          \citep (from natbib) -- To cite a reference between parenthesis
 %%          citationblock environment -- To produce direct citation blocks according to the ABNT
 
-\documentclass[en,oneside,onehalfspacing,bsc_prop]{risethesis}
+\documentclass[en,oneside,onehalfspacing,bsc]{risethesis}
 \usepackage{colortbl}
 \usepackage{color}
 \usepackage[table,xcdraw]{xcolor}
