--- a/references.bib
+++ b/references.bib
@@ -1,6 +1,15 @@
 % This file was created with JabRef 2.6.
 % Encoding: UTF-8
 
+@inproceedings{schwartz2010all,
+  title={All you ever wanted to know about dynamic taint analysis and forward symbolic execution (but might have been afraid to ask)},
+  author={Schwartz, Edward J and Avgerinos, Thanassis and Brumley, David},
+  booktitle={Security and privacy (SP), 2010 IEEE symposium on},
+  pages={317--331},
+  year={2010},
+  organization={IEEE}
+}
+
 @book{aho2003compilers,
   title={Compilers: principles, techniques and tools (for Anna University), 2/e},
   author={Aho, Alfred V},
