--- a/appendix/table-features.tex
+++ b/appendix/table-features.tex
@@ -1,1 +1,226 @@
-'<Base name of class package name: accounts>'	'<Base name of class package name: io>'	'<Base name of class package name: music>'	'<Base name of class package name: telephony>'	'<Base name of class package name: webkit>'	'<Method has parameters>'	'<Method is lone getter or setter>'	'<Method is part of a ABSTRACT class>'	'<Method is part of a FINAL class>'	'<Method is part of a PRIVATE class>'	'<Method is part of a PROTECTED class>'	'<Method is part of a PUBLIC class>'	'<Method is part of a STATIC class>'	'<Method is part of an anonymous class>'	'<Method is part of class android.app.Activity>'	'<Method is part of class android.app.BroadcastReceiver>'	'<Method is part of class android.app.ContentProvider>'	'<Method is part of class android.app.Service>'	'<Method is part of class android.content.ContentResolver>'	'<Method is part of class android.content.Context>'	'<Method is part of class that contains the name com.google.common.io>'	'<Method is part of class that contains the name java.io.>'	'<Method is part of class that ends with Context>'	'<Method is part of class that ends with Factory>'	'<Method is part of class that ends with Handler>'	'<Method is part of class that ends with Loader>'	'<Method is part of class that ends with Manager>'	'<Method is part of class that ends with Service>'	'<Method is part of class that ends with View>'	'<Method is thread runner>'	'<Method modifier is FINAL>'	'<Method modifier is PROTECTED>'	'<Method modifier is PUBLIC>'	'<Method modifier is STATIC>'	'<Method name ends with Messenger>'	'<Method name starts with <init>>'	'<Method name starts with add>'	'<Method name starts with apply>'	'<Method name starts with bind>'	'<Method name starts with clear>'	'<Method name starts with close>'	'<Method name starts with delete>'	'<Method name starts with disable>'	'<Method name starts with dispatch>'	'<Method name starts with do>'	'<Method name starts with dump>'	'<Method name starts with enable>'	'<Method name starts with finish>'	'<Method name starts with get>'	'<Method name starts with handle>'	'<Method name starts with insert>'	'<Method name starts with is>'	'<Method name starts with load>'	'<Method name starts with note>'	'<Method name starts with notify>'	'<Method name starts with onClick>'	'<Method name starts with open>'	'<Method name starts with perform>'	'<Method name starts with process>'	'<Method name starts with put>'	'<Method name starts with query>'	'<Method name starts with register>'	'<Method name starts with release>'	'<Method name starts with remove>'	'<Method name starts with request>'	'<Method name starts with restore>'	'<Method name starts with run>'	'<Method name starts with send>'	'<Method name starts with set>'	'<Method name starts with start>'	'<Method name starts with supply>'	'<Method name starts with toggle>'	'<Method name starts with unregister>'	'<Method name starts with update>'	'<Method returns constant>'	'<Method starts with on and has void/bool return type>'	'<Parameter is interface>'	'<Parameter to abstract sink>'	'<Parameter to sink method adjust>'	'<Parameter to sink method bind>'	'<Parameter to sink method broadcast>'	'<Parameter to sink method clear>'	'<Parameter to sink method com.android.internal.telephony.CommandsInterface>'	'<Parameter to sink method connect>'	'<Parameter to sink method create>'	'<Parameter to sink method delete>'	'<Parameter to sink method dial>'	'<Parameter to sink method disable>'	'<Parameter to sink method dispatch>'	'<Parameter to sink method dump>'	'<Parameter to sink method enable>'	'<Parameter to sink method enqueue>'	'<Parameter to sink method insert>'	'<Parameter to sink method notify>'	'<Parameter to sink method onCreate>'	'<Parameter to sink method perform>'	'<Parameter to sink method println>'	'<Parameter to sink method put>'	'<Parameter to sink method remove>'	'<Parameter to sink method replace>'	'<Parameter to sink method restore>'	'<Parameter to sink method save>'	'<Parameter to sink method send>'	'<Parameter to sink method set>'	'<Parameter to sink method setup>'	'<Parameter to sink method show>'	'<Parameter to sink method start>'	'<Parameter to sink method sync>'	'<Parameter to sink method transact>'	'<Parameter to sink method update>'	'<Parameter to sink method write>'	'<Parameter type contains android.content.contentresolver>'	'<Parameter type contains android.content.context>'	'<Parameter type contains android.content.intent>'	'<Parameter type contains android.database.cursor>'	'<Parameter type contains android.filterfw.core.filtercontext>'	'<Parameter type contains android.net.uri>'	'<Parameter type contains com.android.inputmethod.keyboard.key>'	'<Parameter type contains com.google.common.io>'	'<Parameter type contains event>'	'<Parameter type contains java.io.>'	'<Parameter type contains java.io.filedescriptor>'	'<Parameter type contains java.lang.string>'	'<Parameter type contains observer>'	'<Parameter type contains writer>'	'<Permission name is ACCESS_COARSE_LOCATION>'	'<Permission name is ACCESS_FINE_LOCATION>'	'<Permission name is ACCESS_LOCATION_EXTRA_COMMANDS>'	'<Permission name is ACCESS_NETWORK_STATE>'	'<Permission name is ACCESS_WIFI_STATE>'	'<Permission name is ADD_VOICEMAIL>'	'<Permission name is AUTHENTICATE_ACCOUNTS>'	'<Permission name is BACKUP>'	'<Permission name is BLUETOOTH>'	'<Permission name is BLUETOOTH_ADMIN>'	'<Permission name is BROADCAST_STICKY>'	'<Permission name is CALL_PHONE>'	'<Permission name is CALL_PRIVILEGED>'	'<Permission name is CAMERA>'	'<Permission name is CHANGE_CONFIGURATION>'	'<Permission name is CHANGE_NETWORK_STATE>'	'<Permission name is CHANGE_WIFI_STATE>'	'<Permission name is CLEAR_APP_USER_DATA>'	'<Permission name is DEVICE_POWER>'	'<Permission name is DISABLE_KEYGUARD>'	'<Permission name is DUMP>'	'<Permission name is GET_ACCOUNTS>'	'<Permission name is GET_TASKS>'	'<Permission name is GLOBAL_SEARCH>'	'<Permission name is INTERNET>'	'<Permission name is KILL_BACKGROUND_PROCESSES>'	'<Permission name is MANAGE_ACCOUNTS>'	'<Permission name is MANAGE_APP_TOKENS>'	'<Permission name is MODIFY_AUDIO_SETTINGS>'	'<Permission name is MODIFY_PHONE_STATE>'	'<Permission name is MOUNT_UNMOUNT_FILESYSTEMS>'	'<Permission name is NFC>'	'<Permission name is READ_CALENDAR>'	'<Permission name is READ_CALL_LOG>'	'<Permission name is READ_CONTACTS>'	'<Permission name is READ_EXTERNAL_STORAGE>'	'<Permission name is READ_HISTORY_BOOKMARKS>'	'<Permission name is READ_PHONE_STATE>'	'<Permission name is READ_SMS>'	'<Permission name is READ_SOCIAL_STREAM>'	'<Permission name is READ_SYNC_SETTINGS>'	'<Permission name is READ_SYNC_STATS>'	'<Permission name is READ_USER_DICTIONARY>'	'<Permission name is REBOOT>'	'<Permission name is RECEIVE_BOOT_COMPLETED>'	'<Permission name is RECEIVE_SMS>'	'<Permission name is RECORD_AUDIO>'	'<Permission name is RESTART_PACKAGES>'	'<Permission name is SEND_SMS>'	'<Permission name is SET_DEBUG_APP>'	'<Permission name is SET_TIME_ZONE>'	'<Permission name is SET_WALLPAPER>'	'<Permission name is SET_WALLPAPER_COMPONENT>'	'<Permission name is STOP_APP_SWITCHES>'	'<Permission name is SYSTEM_ALERT_WINDOW>'	'<Permission name is UPDATE_DEVICE_STATS>'	'<Permission name is USE_CREDENTIALS>'	'<Permission name is USE_SIP>'	'<Permission name is VIBRATE>'	'<Permission name is WAKE_LOCK>'	'<Permission name is WRITE_CALENDAR>'	'<Permission name is WRITE_CONTACTS>'	'<Permission name is WRITE_EXTERNAL_STORAGE>'	'<Permission name is WRITE_HISTORY_BOOKMARKS>'	'<Permission name is WRITE_SETTINGS>'	'<Permission name is WRITE_SMS>'	'<Permission name is WRITE_SOCIAL_STREAM>'	'<Permission name is WRITE_SYNC_SETTINGS>'	'<Permission name is WRITE_USER_DICTIONARY>'	'<Return type is android.database.Cursor>'	'<Return type is android.net.Uri>'	'<Return type is android.os.Parcelable>'	'<Return type is boolean>'	'<Return type is byte[]>'	'<Return type is com.android.internal.telephony.Connection>'	'<Return type is int>'	'<Return type is java.util.List>'	'<Return type is java.util.Map>'	'<Return type is void>'	'<Value from method get to sink method>'	'<Value from method parameter to native method>'	'<Value from source method create to return>'	'<Value from source method get to return>'	'<Value from source method is to return>'	'<Value from source method obtainMessage to return>'	'<Value from source method query to return>'	'<Value from source method writeToParcel to return>'	'Method starting with \'insert\' invoked'	class	id
+\begin{center}
+    \rowcolors{2}{lightgray!30}{white}
+    \begin{longtable}{l|l}
+    \caption{%
+    List of all features extracted. Class 1 means a lexical feature, Class 2 a semantic feature and 3 a syntactic feature.%
+    } \label{tab:long} \\
+    Class & Feature \\
+	\toprule
+    1 & Base name of class package name: accounts \\
+    1 & Base name of class package name: io \\
+    1 & Base name of class package name: music \\
+    1 & Base name of class package name: telephony \\
+    1 & Base name of class package name: webkit \\
+    1 & Method has parameters \\
+    1 & Method is lone getter or setter \\
+    2 & Method is part of a ABSTRACT class \\
+    2 & Method is part of a FINAL class \\
+    2 & Method is part of a PRIVATE class \\
+    2 & Method is part of a PROTECTED class \\
+    2 & Method is part of a PUBLIC class \\
+    2 & Method is part of a STATIC class \\
+    2 & Method is part of an anonymous class \\
+    2 & Method is part of class android.app.Activity \\
+    2 & Method is part of class android.app.BroadcastReceiver \\
+    2 & Method is part of class android.app.ContentProvider \\
+    2 & Method is part of class android.app.Service \\
+    2 & Method is part of class android.content.ContentResolver \\
+    2 & Method is part of class android.content.Context \\
+    2 & Method is part of class that contains the name com.google.common.io \\
+    2 & Method is part of class that contains the name java.io. \\
+    2 & Method is part of class that ends with Context \\
+    2 & Method is part of class that ends with Factory \\
+    2 & Method is part of class that ends with Handler \\
+    2 & Method is part of class that ends with Loader \\
+    2 & Method is part of class that ends with Manager \\
+    2 & Method is part of class that ends with Service \\
+    2 & Method is part of class that ends with View \\
+    2 & Method is thread runner \\
+    2 & Method modifier is FINAL \\
+    3 & Method modifier is PROTECTED \\
+    2 & Method modifier is PUBLIC \\
+    2 & Method modifier is STATIC \\
+    1 & Method name ends with Messenger \\
+    1 & Method name starts with <init> \\
+    1 & Method name starts with add \\
+    1 & Method name starts with apply \\
+    1 & Method name starts with bind \\
+    1 & Method name starts with clear \\
+    1 & Method name starts with close \\
+    1 & Method name starts with delete \\
+    1 & Method name starts with disable \\
+    1 & Method name starts with dispatch \\
+    1 & Method name starts with do \\
+    1 & Method name starts with dump \\
+    1 & Method name starts with enable \\
+    1 & Method name starts with finish \\
+    1 & Method name starts with get \\
+    1 & Method name starts with handle \\
+    1 & Method name starts with insert \\
+    1 & Method name starts with is \\
+    1 & Method name starts with load \\
+    1 & Method name starts with note \\
+    1 & Method name starts with notify \\
+    1 & Method name starts with onClick \\
+    1 & Method name starts with open \\
+    1 & Method name starts with perform \\
+    1 & Method name starts with process \\
+    1 & Method name starts with put \\
+    1 & Method name starts with query \\
+    1 & Method name starts with register \\
+    1 & Method name starts with release \\
+    1 & Method name starts with remove \\
+    1 & Method name starts with request \\
+    1 & Method name starts with restore \\
+    1 & Method name starts with run \\
+    1 & Method name starts with send \\
+    1 & Method name starts with set \\
+    1 & Method name starts with start \\
+    1 & Method name starts with supply \\
+    1 & Method name starts with toggle \\
+    1 & Method name starts with unregister \\
+    1 & Method name starts with update \\
+    2 & Method returns constant \\
+    2 & Method starts with on and has void/bool return type \\
+    2 & Parameter is interface \\
+    3 & Parameter to abstract sink \\
+    3 & Parameter to sink method adjust \\
+    3 & Parameter to sink method bind \\
+    3 & Parameter to sink method broadcast \\
+    3 & Parameter to sink method clear \\
+    3 & Parameter to sink method com.android.internal.telephony.CommandsInterface \\
+    3 & Parameter to sink method connect \\
+    3 & Parameter to sink method create \\
+    3 & Parameter to sink method delete \\
+    3 & Parameter to sink method dial \\
+    3 & Parameter to sink method disable \\
+    3 & Parameter to sink method dispatch \\
+    3 & Parameter to sink method dump \\
+    3 & Parameter to sink method enable \\
+    3 & Parameter to sink method enqueue \\
+    3 & Parameter to sink method insert \\
+    3 & Parameter to sink method notify \\
+    3 & Parameter to sink method onCreate \\
+    3 & Parameter to sink method perform \\
+    3 & Parameter to sink method println \\
+    3 & Parameter to sink method put \\
+    3 & Parameter to sink method remove \\
+    3 & Parameter to sink method replace \\
+    3 & Parameter to sink method restore \\
+    3 & Parameter to sink method save \\
+    3 & Parameter to sink method send \\
+    3 & Parameter to sink method set \\
+    3 & Parameter to sink method setup \\
+    3 & Parameter to sink method show \\
+    3 & Parameter to sink method start \\
+    3 & Parameter to sink method sync \\
+    3 & Parameter to sink method transact \\
+    3 & Parameter to sink method update \\
+    3 & Parameter to sink method write \\
+    2 & Parameter type contains android.content.contentresolver \\
+    2 & Parameter type contains android.content.context \\
+    2 & Parameter type contains android.content.intent \\
+    2 & Parameter type contains android.database.cursor \\
+    2 & Parameter type contains android.filterfw.core.filtercontext \\
+    2 & Parameter type contains android.net.uri \\
+    2 & Parameter type contains com.android.inputmethod.keyboard.key \\
+    2 & Parameter type contains com.google.common.io \\
+    2 & Parameter type contains event \\
+    2 & Parameter type contains java.io. \\
+    2 & Parameter type contains java.io.filedescriptor \\
+    2 & Parameter type contains java.lang.string \\
+    2 & Parameter type contains observer \\
+    2 & Parameter type contains writer \\
+    1 & Permission name is ACCESS COARSE LOCATION \\
+    1 & Permission name is ACCESS FINE LOCATION \\
+    1 & Permission name is ACCESS LOCATION EXTRA COMMANDS \\
+    1 & Permission name is ACCESS NETWORK STATE \\
+    1 & Permission name is ACCESS WIFI STATE \\
+    1 & Permission name is ADD VOICEMAIL \\
+    1 & Permission name is AUTHENTICATE ACCOUNTS \\
+    1 & Permission name is BACKUP \\
+    1 & Permission name is BLUETOOTH \\
+    1 & Permission name is BLUETOOTH ADMIN \\
+    1 & Permission name is BROADCAST STICKY \\
+    1 & Permission name is CALL PHONE \\
+    1 & Permission name is CALL PRIVILEGED \\
+    1 & Permission name is CAMERA \\
+    1 & Permission name is CHANGE CONFIGURATION \\
+    1 & Permission name is CHANGE NETWORK STATE \\
+    1 & Permission name is CHANGE WIFI STATE \\
+    1 & Permission name is CLEAR APP USER DATA \\
+    1 & Permission name is DEVICE POWER \\
+    1 & Permission name is DISABLE KEYGUARD \\
+    1 & Permission name is DUMP \\
+    1 & Permission name is GET ACCOUNTS \\
+    1 & Permission name is GET TASKS \\
+    1 & Permission name is GLOBAL SEARCH \\
+    1 & Permission name is INTERNET \\
+    1 & Permission name is KILL BACKGROUND PROCESSES \\
+    1 & Permission name is MANAGE ACCOUNTS \\
+    1 & Permission name is MANAGE APP TOKENS \\
+    1 & Permission name is MODIFY AUDIO SETTINGS \\
+    1 & Permission name is MODIFY PHONE STATE \\
+    1 & Permission name is MOUNT UNMOUNT FILESYSTEMS \\
+    1 & Permission name is NFC \\
+    1 & Permission name is READ CALENDAR \\
+    1 & Permission name is READ CALL LOG \\
+    1 & Permission name is READ CONTACTS \\
+    1 & Permission name is READ EXTERNAL STORAGE \\
+    1 & Permission name is READ HISTORY BOOKMARKS \\
+    1 & Permission name is READ PHONE STATE \\
+    1 & Permission name is READ SMS \\
+    1 & Permission name is READ SOCIAL STREAM \\
+    1 & Permission name is READ SYNC SETTINGS \\
+    1 & Permission name is READ SYNC STATS \\
+    1 & Permission name is READ USER DICTIONARY \\
+    1 & Permission name is REBOOT \\
+    1 & Permission name is RECEIVE BOOT COMPLETED \\
+    1 & Permission name is RECEIVE SMS \\
+    1 & Permission name is RECORD AUDIO \\
+    1 & Permission name is RESTART PACKAGES \\
+    1 & Permission name is SEND SMS \\
+    1 & Permission name is SET DEBUG APP \\
+    1 & Permission name is SET TIME ZONE \\
+    1 & Permission name is SET WALLPAPER \\
+    1 & Permission name is SET WALLPAPER COMPONENT \\
+    1 & Permission name is STOP APP SWITCHES \\
+    1 & Permission name is SYSTEM ALERT WINDOW \\
+    1 & Permission name is UPDATE DEVICE STATS \\
+    1 & Permission name is USE CREDENTIALS \\
+    1 & Permission name is USE SIP \\
+    1 & Permission name is VIBRATE \\
+    1 & Permission name is WAKE LOCK \\
+    1 & Permission name is WRITE CALENDAR \\
+    1 & Permission name is WRITE CONTACTS \\
+    1 & Permission name is WRITE EXTERNAL STORAGE \\
+    1 & Permission name is WRITE HISTORY BOOKMARKS \\
+    1 & Permission name is WRITE SETTINGS \\
+    1 & Permission name is WRITE SMS \\
+    1 & Permission name is WRITE SOCIAL STREAM \\
+    1 & Permission name is WRITE SYNC SETTINGS \\
+    1 & Permission name is WRITE USER DICTIONARY \\
+    2 & Return type is android.database.Cursor \\
+    2 & Return type is android.net.Uri \\
+    2 & Return type is android.os.Parcelable \\
+    2 & Return type is boolean \\
+    2 & Return type is byte[] \\
+    2 & Return type is com.android.internal.telephony.Connection \\
+    2 & Return type is int \\
+    2 & Return type is java.util.List \\
+    2 & Return type is java.util.Map \\
+    2 & Return type is void \\
+    3 & Value from method get to sink method \\
+    3 & Value from method parameter to native method \\
+    3 & Value from source method create to return \\
+    3 & Value from source method get to return \\
+    3 & Value from source method is to return \\
+    3 & Value from source method obtainMessage to return \\
+    3 & Value from source method query to return \\
+    3 & Value from source method writeToParcel to return \\
+    3 & Method starting with insert invoked \\
+    \bottomrule
+    \end{longtable}
+    \end{center}
+    
+    \end{document}
