--- a/references.bib
+++ b/references.bib
@@ -1,6 +1,20 @@
 % This file was created with JabRef 2.6.
 % Encoding: UTF-8
 
+@misc{rasthofer2014api,
+  title={SuSi Android APIs},
+  URL = {https://github.com/Sable/android-platforms},
+  note = {Accessed: 01-11-2018},
+  year={2018}
+}
+
+@misc{hiddenapi,
+  title={Android Hidden APIs},
+  URL = {https://github.com/anggrayudi/android-hidden-api},
+  note = {Accessed: 01-11-2018},
+  year={2018}
+}
+
 @inproceedings{schwartz2010all,
   title={All you ever wanted to know about dynamic taint analysis and forward symbolic execution (but might have been afraid to ask)},
   author={Schwartz, Edward J and Avgerinos, Thanassis and Brumley, David},
