--- a/risethesis.tex
+++ b/risethesis.tex
@@ -73,6 +73,7 @@
 \usepackage{colortbl}
 \usepackage{color}
 \usepackage[table,xcdraw]{xcolor}
+\usepackage{longtable}
 \usepackage{microtype}
 \usepackage{bibentry}
 \usepackage{subfigure}
@@ -222,6 +223,7 @@
 \include{chapters/introduction}
 \include{chapters/background}
 \include{chapters/models/intro}
+\include{chapters/architecture}
 \include{chapters/results}
 \include{chapters/conclusion}
 
@@ -242,7 +244,7 @@
 
 % Appendix
 
-%\theappendix
-%\include{appendix/mapping-study}
+\theappendix
+\include{appendix/table-features}
 
 \end{document}
