--- a/references.bib
+++ b/references.bib
@@ -1,6 +1,95 @@
 % This file was created with JabRef 2.6.
 % Encoding: UTF-8
 
+@article{arzt2014flowdroid,
+  title={Flowdroid: Precise context, flow, field, object-sensitive and lifecycle-aware taint analysis for android apps},
+  author={Arzt, Steven and Rasthofer, Siegfried and Fritz, Christian and Bodden, Eric and Bartel, Alexandre and Klein, Jacques and Le Traon, Yves and Octeau, Damien and McDaniel, Patrick},
+  journal={Acm Sigplan Notices},
+  volume={49},
+  number={6},
+  pages={259--269},
+  year={2014},
+  publisher={ACM}
+}
+
+@misc{androidpermissions,
+  title={Request App Permissions. Google Android Documentation.},
+  URL = {https://developer.android.com/training/permissions/requesting},
+  note = {Accessed: 12-10-2018},
+  year={2018}
+}
+
+@article{kolias2017ddos,
+  title={DDoS in the IoT: Mirai and other botnets},
+  author={Kolias, Constantinos and Kambourakis, Georgios and Stavrou, Angelos and Voas, Jeffrey},
+  journal={Computer},
+  volume={50},
+  number={7},
+  pages={80--84},
+  year={2017},
+  publisher={IEEE}
+}
+
+@inproceedings{al2017internet,
+  title={Internet of Things (IoT) communication protocols},
+  author={Al-Sarawi, Shadi and Anbar, Mohammed and Alieyan, Kamal and Alzubaidi, Mahmood},
+  booktitle={Information Technology (ICIT), 2017 8th International Conference on},
+  pages={685--690},
+  year={2017},
+  organization={IEEE}
+}
+
+@inproceedings{zhang2014iot,
+  title={IoT security: ongoing challenges and research opportunities},
+  author={Zhang, Zhi-Kai and Cho, Michael Cheng Yi and Wang, Chia-Wei and Hsu, Chia-Wei and Chen, Chong-Kuan and Shieh, Shiuhpyng},
+  booktitle={Service-Oriented Computing and Applications (SOCA), 2014 IEEE 7th International Conference on},
+  pages={230--234},
+  year={2014},
+  organization={IEEE}
+}
+
+@book{raj2017internet,
+  title={The Internet of Things: Enabling technologies, platforms, and use cases},
+  author={Raj, Pethuru and Raman, Anupama C},
+  year={2017},
+  publisher={Auerbach Publications}
+}
+
+@article{tan2015securing,
+  title={Securing android: a survey, taxonomy, and challenges},
+  author={Tan, Darell JJ and Chua, Tong-Wei and Thing, Vrizlynn LL and others},
+  journal={ACM Computing Surveys (CSUR)},
+  volume={47},
+  number={4},
+  pages={58},
+  year={2015},
+  publisher={ACM}
+}
+
+@misc{ycraig,
+  title={Google’s Newest Feature: Find My Home.},
+  URL = {https://www.tripwire.com/state-of-security/vert/googles-newest-feature-find-my-home/},
+  author={Young, C.},
+  note = {Accessed: 10-11-2018},
+  year={2018}
+}
+
+@misc{iotmarket,
+  title={GrowthEnabler, Market Pulse Report, Internet of Things},
+  URL = {https://growthenabler.com/flipbook/pdf/IOT%20Report.pdf},
+  note = {Accessed: 05-03-2018},
+  year={2017}
+}
+
+@article{minerva2015towards,
+  title={Towards a definition of the Internet of Things},
+  author={Minerva, Roberto and Biru, Abyi and Rotondi, Domenico},
+  journal={IEEE Internet Initiative},
+  volume={1},
+  pages={1--86},
+  year={2015}
+}
+
 @misc{rasthofer2014api,
   title={SuSi Android APIs},
   URL = {https://github.com/Sable/android-platforms},
