--- a/risethesis.tex
+++ b/risethesis.tex
@@ -76,7 +76,7 @@
 \usepackage{longtable}
 \usepackage{microtype}
 \usepackage{bibentry}
-\usepackage{subfigure}
+\usepackage{subfig}
 \usepackage{multirow}
 \usepackage{multicol}
 \usepackage{rotating}
