Finished intro and background.

--- a/references.bib
+++ b/references.bib
@@ -1,6 +1,62 @@
 % This file was created with JabRef 2.6.
 % Encoding: UTF-8
 
+@inproceedings{russo2010dynamic,
+  title={Dynamic vs. static flow-sensitive security analysis},
+  author={Russo, Alejandro and Sabelfeld, Andrei},
+  booktitle={Computer Security Foundations Symposium (CSF), 2010 23rd IEEE},
+  pages={186--199},
+  year={2010},
+  organization={IEEE}
+}
+
+@article{tam2017evolution,
+  title={The evolution of android malware and android analysis techniques},
+  author={Tam, Kimberly and Feizollah, Ali and Anuar, Nor Badrul and Salleh, Rosli and Cavallaro, Lorenzo},
+  journal={ACM Computing Surveys (CSUR)},
+  volume={49},
+  number={4},
+  pages={76},
+  year={2017},
+  publisher={ACM}
+}
+
+@inproceedings{felt2011android,
+  title={Android permissions demystified},
+  author={Felt, Adrienne Porter and Chin, Erika and Hanna, Steve and Song, Dawn and Wagner, David},
+  booktitle={Proceedings of the 18th ACM conference on Computer and communications security},
+  pages={627--638},
+  year={2011},
+  organization={ACM}
+}
+
+@inproceedings{barrera2010methodology,
+  title={A methodology for empirical analysis of permission-based security models and its application to android},
+  author={Barrera, David and Kayacik, H G{\"u}ne{\c{s}} and van Oorschot, Paul C and Somayaji, Anil},
+  booktitle={Proceedings of the 17th ACM conference on Computer and communications security},
+  pages={73--84},
+  year={2010},
+  organization={ACM}
+}
+
+@inproceedings{jiang2012dissecting,
+  title={Dissecting android malware: Characterization and evolution},
+  author={Jiang, Xuxian and Zhou, Yajin},
+  booktitle={2012 IEEE Symposium on Security and Privacy},
+  pages={95--109},
+  year={2012},
+  organization={IEEE}
+}
+
+@inproceedings{wei2014amandroid,
+  title={Amandroid: A precise and general inter-component data flow analysis framework for security vetting of android apps},
+  author={Wei, Fengguo and Roy, Sankardas and Ou, Xinming and others},
+  booktitle={Proceedings of the 2014 ACM SIGSAC Conference on Computer and Communications Security},
+  pages={1329--1341},
+  year={2014},
+  organization={ACM}
+}
+
 @article{arzt2014flowdroid,
   title={Flowdroid: Precise context, flow, field, object-sensitive and lifecycle-aware taint analysis for android apps},
   author={Arzt, Steven and Rasthofer, Siegfried and Fritz, Christian and Bodden, Eric and Bartel, Alexandre and Klein, Jacques and Le Traon, Yves and Octeau, Damien and McDaniel, Patrick},
