Text update, removed models chapter

--- a/references.bib
+++ b/references.bib
@@ -10,6 +10,16 @@
   organization={IEEE}
 }
 
+@article{cruz2018dynamic,
+  title={Dynamic classifier selection: Recent advances and perspectives},
+  author={Cruz, Rafael MO and Sabourin, Robert and Cavalcanti, George DC},
+  journal={Information Fusion},
+  volume={41},
+  pages={195--216},
+  year={2018},
+  publisher={Elsevier}
+}
+
 @article{tam2017evolution,
   title={The evolution of android malware and android analysis techniques},
   author={Tam, Kimberly and Feizollah, Ali and Anuar, Nor Badrul and Salleh, Rosli and Cavallaro, Lorenzo},
@@ -70,7 +80,7 @@
 
 @misc{androidpermissions,
   title={Request App Permissions. Google Android Documentation.},
-  URL = {https://developer.android.com/training/permissions/requesting},
+  url = {https://developer.android.com/training/permissions/requesting},
   note = {Accessed: 12-10-2018},
   year={2018}
 }
@@ -124,7 +134,7 @@
 
 @misc{ycraig,
   title={Google’s Newest Feature: Find My Home.},
-  URL = {https://www.tripwire.com/state-of-security/vert/googles-newest-feature-find-my-home/},
+  url = {https://www.tripwire.com/state-of-security/vert/googles-newest-feature-find-my-home/},
   author={Young, C.},
   note = {Accessed: 10-11-2018},
   year={2018}
@@ -132,7 +142,7 @@
 
 @misc{iotmarket,
   title={GrowthEnabler, Market Pulse Report, Internet of Things},
-  URL = {https://growthenabler.com/flipbook/pdf/IOT%20Report.pdf},
+  url = {https://growthenabler.com/flipbook/pdf/IOT%20Report.pdf},
   note = {Accessed: 05-03-2018},
   year={2017}
 }
@@ -148,14 +158,14 @@
 
 @misc{rasthofer2014api,
   title={SuSi Android APIs},
-  URL = {https://github.com/Sable/android-platforms},
+  url = {https://github.com/Sable/android-platforms},
   note = {Accessed: 01-11-2018},
   year={2018}
 }
 
 @misc{hiddenapi,
   title={Android Hidden APIs},
-  URL = {https://github.com/anggrayudi/android-hidden-api},
+  url = {https://github.com/anggrayudi/android-hidden-api},
   note = {Accessed: 01-11-2018},
   year={2018}
 }
@@ -185,7 +195,7 @@
 
 @misc{androidcoderef,
   title={AOSP Java Code Style for Contributors},
-  URL = {https://source.android.com/setup/contribute/code-style},
+  url = {https://source.android.com/setup/contribute/code-style},
   note = {Accessed: 12-10-2018},
   year={2018}
 }
@@ -196,7 +206,7 @@
   Publisher = {Morgan Kaufmann},
   Year = {2003},
   ISBN = {1558608877},
-  URL = {https://www.amazon.com/Network-Analysis-Architecture-Kaufmann-Networking/dp/1558608877?SubscriptionId=AKIAIOBINVZYXZQZ2U3A&tag=chimbori05-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1558608877}
+  url = {https://www.amazon.com/Network-Analysis-Architecture-Kaufmann-Networking/dp/1558608877?SubscriptionId=AKIAIOBINVZYXZQZ2U3A&tag=chimbori05-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1558608877}
 }
 
 @article{viet2010specifying,
