--- a/risethesis.tex
+++ b/risethesis.tex
@@ -232,8 +232,8 @@
 
 % List of acronyms
 % Acronyms manual: http://linorg.usp.br/CTAN/macros/latex/contrib/acronym/acronym.pdf
-\listofacronyms
-\input{acronyms}
+% \listofacronyms
+% \input{acronyms}
 
 % Summary (tables of contents)
 \tableofcontents
@@ -243,7 +243,6 @@
 % Uncomment to graduation
 \include{chapters/introduction}
 \include{chapters/background}
-\include{chapters/models/intro}
 \include{chapters/architecture}
 \include{chapters/results}
 \include{chapters/conclusion}
